[gd_scene load_steps=7 format=3 uid="uid://bajjv77iyk4qa"]

[ext_resource type="Script" path="res://src/puzzles/flow/flow_puzzle.gd" id="1_n2dmh"]
[ext_resource type="PackedScene" uid="uid://q6lobq1gs4av" path="res://src/puzzles/flow/flow_puzzle_4.tscn" id="2_5cq3e"]
[ext_resource type="AudioStream" uid="uid://bdelmtnx6xkdv" path="res://assets/sounds/flow_place.wav" id="4_1otxy"]
[ext_resource type="AudioStream" uid="uid://cgvek1qqhhft1" path="res://assets/sounds/flow_complete.wav" id="5_8jgm7"]
[ext_resource type="AudioStream" uid="uid://defk6mw8euh26" path="res://assets/sounds/flow_wrong.wav" id="5_t45ss"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyori"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="FlowPuzzle" type="Node2D"]
script = ExtResource("1_n2dmh")
puzzle_to_load = ExtResource("2_5cq3e")

[node name="Highlight" type="Panel" parent="."]
z_index = 3
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vyori")

[node name="PlaceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1otxy")
volume_db = -8.01
bus = &"Sound"

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_t45ss")
volume_db = -7.495
bus = &"Sound"

[node name="CompleteSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8jgm7")
volume_db = -5.126
bus = &"Sound"
